# google-sheets-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SECURITY_AUDIT.md  pyproject.toml
.cursor/: rules
.github/workflows/: ci.yml  publish.yml
.windsurf/: rules.md
agents/: AGENT_INSTRUCTIONS.md  EXAMPLES.md  SYSTEM_PROMPT.md
docs/: AUTH.md  EDITOR_SETUP.md  PUBLISHING.md  QUICKSTART.md  TROUBLESHOOTING.md  VERSIONING.md
mcp-config-examples/: README.md  claude-desktop.json  cursor.json  vscode.json  windsurf.json  zed.json
src/g_sheet_mcp/: __init__.py  auth.py  models.py  server.py  sheets.py
tests/: conftest.py  test_auth.py  test_integration.py  test_server.py  test_sheets.py
