[project]
name = "g-sheet-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for reading Google Sheets using Application Default Credentials (ADC)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "google-sheets", "llm", "ai", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "google-auth>=2.38.0",
    "google-api-python-client>=2.165.0",
    "google-auth-httplib2>=0.2.0",
    "pydantic>=2.10.0",
    "anyio>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "types-requests>=2.32.0",
]

[project.scripts]
g-sheet-mcp = "g_sheet_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/g_sheet_mcp"
"Bug Tracker" = "https://github.com/yourusername/g_sheet_mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/g_sheet_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
